Updated the side navigation page #855

--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -108,8 +108,7 @@ permalink: "/components/side-navigation.html"
 </ol>
 
 <p class="m-b-lg">For an example that has 6 levels, review our <a href="/components/side-navigation-sample.html"
-  target="_blank">Side
-  Navigation sample site</a>.</p>
+  target="_blank">live example.</a></p>
 
 
 <!--TABS-->
@@ -159,7 +158,7 @@ permalink: "/components/side-navigation.html"
        {% include "../../src/_includes/modules/side-navigation-level3.html" %}
       </div>
      </div>
-
+     <a href="/components/side-navigation-sample.html" class="btn btn-default mb-4" target="_blank">Live example</a>
 
 
     </div>
