Added news list page to patterns  #475

--- a/pages/sample/newsroom-sampe.html
+++ b/pages/sample/newsroom-sampe.html
@@ -18,7 +18,7 @@ permalink: "/patterns/newsroom-sample.html"
    <ul class="list-navigation">
     <li><a href="javascript:;" class="landing active">Newsroom</a></li>
     <li><a href="javascript:;" aria-disabled="true">News articles</a></li>
-    <li><a href="javascript:;" aria-disabled="true">Press releases</a></li>
+    <li><a href="/patterns/list-of-articles-or-content-sample.html">Press releases</a></li>
     <li><a href="javascript:;" aria-disabled="true">Blog</a></li>
     <li><a href="javascript:;" aria-disabled="true">Disaster information</a></li>
     <li><a href="javascript:;" aria-disabled="true">Subscription services</a></li>
