--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -1,14 +1,15 @@
-﻿---
-title: Sample - Newsroom featured banner
+---
+title: Sample - List of articles or content
 landing: Patterns
 layout: sample-site-news.njk
-permalink: "/patterns/newsroom-featured-banner.html"
+permalink: "/patterns/list-of-articles-or-content-sample.html"
 ---
 
 <nav aria-label="Breadcrumb">
  <ol class="breadcrumb">
-  <li><a href="/patterns/newsroom.html" title="Home page">Home</a></li>
-  <li class="active">Newsroom</li>
+  <li><a href="/patterns/list-of-articles-or-content.html" title="Home page">Home</a></li>
+  <li><a href="/patterns/newsroom-sample.html" title="Home page">Newsroom</a></li>
+  <li class="active">List of articles or content</li>
  </ol>
 </nav>
 
@@ -16,9 +17,9 @@ permalink: "/patterns/newsroom-featured-banner.html"
  <div class="col-lg-3">
   <nav aria-label="list navigation">
    <ul class="list-navigation">
-    <li><a href="javascript:;" class="landing active">Newsroom</a></li>
+    <li><a href="/patterns/newsroom-sample.html" class="landing">Newsroom</a></li>
     <li><a href="javascript:;" aria-disabled="true">News articles</a></li>
-    <li><a href="/patterns/list-of-articles-or-content-sample.html">Press releases</a></li>
+    <li><a href="javascript:;" aria-disabled="true" class="active">Press releases</a></li>
     <li><a href="javascript:;" aria-disabled="true">Blog</a></li>
     <li><a href="javascript:;" aria-disabled="true">Disaster information</a></li>
     <li><a href="javascript:;" aria-disabled="true">Subscription services</a></li>
@@ -28,9 +29,9 @@ permalink: "/patterns/newsroom-featured-banner.html"
   </nav>
  </div>
  <div class="col-lg-9">
-  <h1 class="mt-lg-0">Newsroom</h1>
-  {% include "../../src/_includes/modules/news-featured-banner.html" %}
-  {% include "../../src/_includes/modules/news-cards.html" %}
-  {% include "../../src/_includes/modules/news-list.html" %}
+  <h1 class="mt-lg-0">Page heading</h1>
+  {% include "../../src/_includes/modules/news-list-extended.html" %}
+  <hr class="m-y-lg">
+  <cagov-pagination data-current-page="5" data-total-pages="99"></cagov-pagination>
  </div>
 </div>
