Added news article pattern #476

--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -8,7 +8,7 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
 <nav aria-label="Breadcrumb">
  <ol class="breadcrumb">
   <li><a href="/patterns/list-of-articles-or-content.html" title="Home page">Home</a></li>
-  <li><a href="/patterns/newsroom-sample.html" title="Home page">Newsroom</a></li>
+  <li><a href="/patterns/newsroom-sample.html" title="Newsroom page">Newsroom</a></li>
   <li class="active">List of articles or content</li>
  </ol>
 </nav>
