Fixed exacutive profile page

--- a/pages/sample/executive-profile.html
+++ b/pages/sample/executive-profile.html
@@ -21,7 +21,7 @@ permalink: "components/executive-profile.html"
  <li>Link to contact information or bio (optional)</li>
 </ul>
 
-<h2>Defaul</h2>
+<h2>Default</h2>
 <p>The background color is your color theme’s secondary color. </p>
 
 <!--TABS-->
@@ -209,7 +209,7 @@ permalink: "components/executive-profile.html"
 </ul>
 <p>The executive profiles are transparent. Select colors that work for your background color. Use dark text on light
  backgrounds, and light text on dark backgrounds.</p>
-<p><span class="text-highlight">Note: </span> Make sure to get approval before using a person’s banner. For instance,
+<p><span class="bold">Note: </span> Make sure to get approval before using a person’s banner. For instance,
  the Governor’s Office may want to use a specific image or content.</p>
 <h3>
  How not to use it
@@ -218,10 +218,10 @@ permalink: "components/executive-profile.html"
 </p>Do not use the executive profile to feature staff members. This pattern should be reserved to the directorate level
 of leadership.</p>
 
-<h2>Layout</h2>
+<h3>Layout</h3>
 <p>These sample layouts show the recommended visual arrangement of executive profiles.</p>
 
-<h3>Default</h3>
+<h4>Default</h4>
 <p>Vertically stack default profiles next to a large area of content above the footer.</p>
 <figure class="border-1 brd-gray-200">
  <img src="/images/sample/images/exec-profile1.png" class="img-fluid"
@@ -230,7 +230,7 @@ of leadership.</p>
 
 
 
-<h3>Transparent: Dark background</h3>
+<h4>Transparent: Dark background</h4>
 <p>Horizontally place transparent profiles next to each other above the footer. These profiles will vertically stack on
  smaller devices.</p>
 <figure class="border-1 brd-gray-200">
