Fixed newsroom page

--- a/pages/sample/newsroom.html
+++ b/pages/sample/newsroom.html
@@ -55,7 +55,9 @@ permalink: "patterns/newsroom.html"
      <img src="/images/sample/images/news1.png" alt="Newsroom page with featured images example">
     </figure>
 
-    <a href="/patterns/newsroom-sample.html" class="btn btn-default mb-4" target="_blank">Live example</a>
+    <a href="/patterns/newsroom-sample.html" class="btn btn-outline-primary mb-4" target="_blank"
+     title="Featured images news live example">Live example in new tab <span class="ca-gov-icon-arrow-next"
+      aria-hiddne="true"></span></a>
    </div>
   </div>
  </section>
@@ -89,7 +91,7 @@ permalink: "patterns/newsroom.html"
 </div>
 <!--END TABS-->
 
-<h2>Sample</h2>
+<h2>Landing page with feature banner</h2>
 <!--TABS-->
 <div class="tabs responsive">
  <ul class="nav-tabs">
@@ -118,7 +120,9 @@ permalink: "patterns/newsroom.html"
      <img src="/images/sample/images/news2.png" alt="Newsroom page with with feature banner example">
     </figure>
 
-    <a href="/patterns/newsroom-featured-banner.html" class="btn btn-default mb-4" target="_blank">Live example</a>
+    <a href="/patterns/newsroom-featured-banner.html" class="btn btn-outline-primary mb-4" target="_blank">Live example
+     in new
+     tab <span class="ca-gov-icon-arrow-next" aria-hiddne="true"></span></a>
    </div>
 
   </div>
@@ -152,10 +156,10 @@ permalink: "patterns/newsroom.html"
 <p>We provide a news landing page framework for you to add your department news information. It provides easy access to
  news items such as:</p>
 <ul>
- <li>news releases</li>
- <li>subscription services</li>
- <li>press information</li>
- <li>trending topics</li>
+ <li>News releases</li>
+ <li>Subscription services</li>
+ <li>Press information</li>
+ <li>Trending topics</li>
 </ul>
 <h4>Featured section</h4>
 <p>Use the featured section at the top of the page to highlight important content (top tasks or needs). </p>
