fixed newslist page

--- a/pages/sample/list-of-articles-or-content.html
+++ b/pages/sample/list-of-articles-or-content.html
@@ -63,8 +63,10 @@ permalink: "/patterns/list-of-articles-or-content.html"
      <img src="/images/sample/images/newslist.png" alt="List of articles page example">
     </figure>
 
-    <a href="/patterns/list-of-articles-or-content-sample.html" class="btn btn-default mb-4" target="_blank">Live
-     example</a>
+    <a href="/patterns/list-of-articles-or-content-sample.html" class="btn btn-outline-primary mb-4"
+     target="_blank">Live example
+     in new
+     tab <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
    </div>
   </div>
  </section>
@@ -98,11 +100,11 @@ permalink: "/patterns/list-of-articles-or-content.html"
 <h3>When and how to use it </h3>
 <p>Use this pattern for related items. For instance, a News page could include news releases, news articles, and blog
  posts. This page would not include content that is not news related (data reports, legislative analyses).</p>
-<p><span class="text-highlight">Pro tip:</span> You may want to discuss and document retention internally for these
+<p><span class="bold">Tip:</span> You may want to discuss and document retention internally for these
  items to keep your website lean. For
  instance, only keep the last 3 years of new releases.</p>
-<p>This pattern is related to the <a herf="/patterns/newsroom.html">Newsroom pattern</a> and the <a
-  herf="/patterns/article.html">Article pattern</a>. You can use all three patterns to have a cohesive news strategy for
+<p>This pattern is related to the <a href="/patterns/newsroom.html">Newsroom pattern</a> and the <a
+  href="/patterns/article.html">Article pattern</a>. You can use all three patterns to have a cohesive news strategy for
  your website.</p>
 
 <h3>How not to use it</h3>
