--- a/pages/sample/newsroom.html
+++ b/pages/sample/newsroom.html
@@ -57,7 +57,7 @@ permalink: "patterns/newsroom.html"
 
     <a href="/patterns/newsroom-sample.html" class="btn btn-outline-primary mb-4" target="_blank"
      title="Featured images news live example">Live example in new tab <span class="ca-gov-icon-arrow-next"
-      aria-hiddne="true"></span></a>
+      aria-hidden="true"></span></a>
    </div>
   </div>
  </section>
@@ -122,7 +122,7 @@ permalink: "patterns/newsroom.html"
 
     <a href="/patterns/newsroom-featured-banner.html" class="btn btn-outline-primary mb-4" target="_blank">Live example
      in new
-     tab <span class="ca-gov-icon-arrow-next" aria-hiddne="true"></span></a>
+     tab <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
    </div>
 
   </div>
