fixed article page

--- a/pages/sample/article.html
+++ b/pages/sample/article.html
@@ -52,8 +52,9 @@ permalink: "/patterns/article.html"
      <img src="/images/sample/images/news-article.png" alt="News article page example">
     </figure>
 
-    <a href="/patterns/article-sample.html" class="btn btn-default mb-4" target="_blank">Live
-     example</a>
+    <a href="/patterns/article-sample.html" class="btn btn-outline-primary mb-4" target="_blank">Live example
+     in new
+     tab <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
    </div>
   </div>
  </section>
@@ -88,7 +89,7 @@ permalink: "/patterns/article.html"
 <p>Use this page pattern for content that captures information at a point in time. This includes news articles, press
  releases, or blog posts. You can also use this as part of a digital publication.</p>
 <p>Use other components on this page, as needed.</p>
-<p><span class="bold">Pro tip:</span> Make sure that important content does not only appear in news articles. Articles
+<p><span class="bold">Tip:</span> Make sure that important content does not only appear in news articles. Articles
  age immediately after publication. Publish the content somewhere better on your website.</p>
 
 
