--- a/pages/sample/pagination.html
+++ b/pages/sample/pagination.html
@@ -9,7 +9,7 @@ permalink: "components/pagination.html"
 
 <nav class="page-navigation"></nav>
 
-<p>Pagination helps you navigate between a series of pages.</p>
+<p>Pagination splits information over multiple pages. It helps your audience navigate between pages for information.</p>
 
 <p>The controls allow you to move forward or backward or go directly to a specific page.</p>
 
@@ -38,7 +38,7 @@ permalink: "components/pagination.html"
    </a>
   </div>
   <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm">
+   <div class="p-t p-b-0">
     <cagov-pagination data-current-page="5" data-total-pages="99"></cagov-pagination>
    </div>
   </div>
@@ -68,19 +68,15 @@ permalink: "components/pagination.html"
 
 <h2>Usage</h2>
 <h3>When and how to use it </h3>
-
-<p>Add the pagination component after the content on each page that you’re paginating. Use pagination if it improves the
- performance or usability of your service.</p>
-
-<p>Consider using pagination when:</p>
-
+<p>Use pagination when:</p>
 <ul>
  <li>Showing all the content on a single page is too much and causes poor performance</li>
  <li>Most users will only need the content on the first few pages</li>
  <li>A long list of content could benefit from pagination</li>
 </ul>
-
 <p>The default number displayed will vary depending on the context.</p>
+<p>Add the pagination component after the content on each page that you’re paginating. Use pagination if it improves the
+ performance or usability of your service. </p>
 
 <p>Common uses of pagination include:</p>
 
