fixed step list container

--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -142,7 +142,7 @@ permalink: "patterns/progress-tracker.html"
    </a>
   </div>
   <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
-   <div class="p-a-sm p-y-md">
+   <div class="p-a-sm p-b-0 p-t-lg">
     {% include "../../src/_includes/modules/step-list.html" %}
    </div>
   </div>
