Updated template's updates page

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -24,18 +24,44 @@ permalink: "template-updates.html"
  </thead>
  <tbody>
   <tr>
-    <td class="text-bold font-size-16">6.0.9</td>
-    <td class="font-size-16">11-23-22</td>
-    <td>
-     <ul class="font-size-16">
-      <li>Updated alert banner</li>
-      <li>Added 8 new icons to the CAGov icons font</li>
-      <li>Added side navigation component</li>
-      <li>Added pagination to the icon search page</li>
-      <li>Added automatic "on this page" navigation component</li>
-     </ul>
-    </td>
-   </tr>
+   <td class="text-bold font-size-16">6.1.1</td>
+   <td class="font-size-16">3-28-23</td>
+   <td>
+    <ul class="font-size-16">
+     <li>Added new pagination component</li>
+     <li>Added new executive profile component</li>
+     <li>Updated search results look and feel</li>
+     <li>Fixed multiple accessibility issue throughout website</li>
+     <li>Added new pattern samples such as newsroom, news-list, and article</li>
+    </ul>
+   </td>
+  </tr>
+  <tr>
+   <td class="text-bold font-size-16">6.1.0</td>
+   <td class="font-size-16">12-23-23</td>
+   <td>
+    <ul class="font-size-16">
+     <li>Updated alert banner</li>
+     <li>Added 8 new icons to the CAGov icons font</li>
+     <li>Added side navigation component</li>
+     <li>Added pagination to the icon search page</li>
+     <li>Added new contact us form that posts feedback to airtable</li>
+    </ul>
+   </td>
+  </tr>
+  <tr>
+   <td class="text-bold font-size-16">6.0.9</td>
+   <td class="font-size-16">11-23-22</td>
+   <td>
+    <ul class="font-size-16">
+     <li>Updated navigation structure, information architecture and content flow</li>
+     <li>Updated side navigation styles</li>
+     <li>Added new feature banner component into patterns samples</li>
+     <li>Added new step list component into the progress tracker pattern</li>
+     <li>Added automatic "on this page" navigation component</li>
+    </ul>
+   </td>
+  </tr>
   <tr>
    <td class="text-bold font-size-16">6.0.8</td>
    <td class="font-size-16">7-30-22</td>
