Changed Cagov to CA.gov on site navigation page

--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -337,7 +337,7 @@ permalink: "structure/site-navigation.html"
 
 
   <h2>Icon menu</h2>
-  <p>Navigation with icons usually appears to the right of the site logo. It uses icons from CAGov font library inside
+  <p>Navigation with icons usually appears to the right of the site logo. It uses icons from CA.gov font library inside
    of the first level navigation items.</p>
 
 
