updated tabs page #1201

--- a/pages/sample/tabs.html
+++ b/pages/sample/tabs.html
@@ -43,7 +43,7 @@ permalink: "components/tabs.html"
   <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
    <div class="p-a-sm p-y-0 p-t-md">
     <h3 class="h4 m-t-0">Heading example</h3>
-    <p>Use tabs sparingly. When using tabs, don't use too many.</p>
+    <p>When using tabs, don't use too many.</p>
    </div>
   </div>
  </section>
