--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -158,7 +158,8 @@ permalink: "/components/side-navigation.html"
        {% include "../../src/_includes/modules/side-navigation-level3.html" %}
       </div>
      </div>
-     <a href="/components/side-navigation-sample.html" class="btn btn-default mb-4" target="_blank">Live example</a>
+     <a href="/components/side-navigation-sample.html" class="btn btn-outline-primary mb-4" target="_blank">Live
+      example in new tab<span class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
 
 
     </div>
