--- a/pages/sample/pagination.html
+++ b/pages/sample/pagination.html
@@ -199,7 +199,7 @@ paginator.addEventListener('paginationClick', function (e) {
   <thead>
     <tr>
       <th scope="col">Guideline</th>
-      <th scope="col">Example</th>
+      <th scope="col">Live example</th>
     </tr>
   </thead>
   <tbody>
