Remove extra :, and remove pattern from list-of-articles-or-content.html

--- a/pages/sample/list-of-articles-or-content.html
+++ b/pages/sample/list-of-articles-or-content.html
@@ -23,7 +23,7 @@ permalink: "/patterns/list-of-articles-or-content.html"
 <p>Here is a breakdown of this pattern:</p>
 <ul>
  <li><span class="bold">Page title:</span> Meaningful and concise. E.g.: News releases</li>
- <li><span class="bold">Time period:</span> (level 2 heading): This can be by year, month and year, quarter.</li>
+ <li><span class="bold">Time period</span> (level 2 heading): This can be by year, month and year, quarter.</li>
  <li><span class="bold">Item:</span> The item is listed in 3 parts
   <ul>
    <li>Title: Concise title that links to the item</li>
@@ -111,7 +111,7 @@ permalink: "/patterns/list-of-articles-or-content.html"
 <p>Do not mix unrelated items.</p>
 <p>If possible, avoid PDFs to increase the usability and accessibility of your website. Instead, use HTML pages.</p>
 
-<h3>Components and patterns used</h3>
+<h3>Components used</h3>
 <ul>
  <li>Horizontal separator</li>
  <li>Pagination</li>
