Update h3 to 'Typography and components used' in article.html

--- a/pages/sample/article.html
+++ b/pages/sample/article.html
@@ -96,7 +96,7 @@ permalink: "/patterns/article.html"
 <h3>How not to use it</h3>
 <p>Avoid using this template for content that is not a press release, an article, or similar content.</p>
 
-<h3>Components and patterns used</h3>
+<h3>Typography and components used</h3>
 <ul>
  <li>Lead text</li>
  <li>Horizontal separator</li>
