Update page content from Google Doc

--- a/pages/sample/eleventy.html
+++ b/pages/sample/eleventy.html
@@ -34,26 +34,14 @@ permalink: "/get-started/eleventy.html"
    generation.</p>
   <h2>Using Eleventy</h2>
 
-  <h3>Step 1. Clone or download the template for GitHub</h3>
+  <h3>Step 1. Download the template from GitHub</h3>
 
-  <p>Clone: <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">State
-    Web Template GitHub Repository</a><br>
+  <p>
    Download: <a
     href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/releases">Latest
-    template releases for download</a><br>
-   Framework: <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-eleventy">Eleventy
-    framework</a></p>
+    template releases for download</a></p>
 
-  <h3>Step 2. Set up your pages</h3>
-
-  <p>To start, you can use the sample State Template web pages. If your website doesn’t use NPM or Eleventy, you can
-   use these clean starter template codes:</p>
-  <button type="button" class="btn btn-default d-block m-b-md brd-primary" style="color:#046B99;" data-bs-toggle="modal"
-   data-bs-target="#template-blocks">Clean HTML template source code</button>
-  <button type="button" class="btn btn-default d-block m-b-md brd-primary" style="color:#046B99;" data-bs-toggle="modal"
-   data-bs-target="#with-includes">HTML page that uses nunjucks includes source code</button>
-
-  <h3>Step 3. Install Node.js</h3>
+  <h3>Step 2. Install Node.js</h3>
 
   <p>Make sure your local machine has Node installed. To see if Node is installed, open Windows Command Prompt,
    Powershell or a similar command line tool. Type:</p>
@@ -63,7 +51,7 @@ permalink: "/get-started/eleventy.html"
   <p>This should print the version number. If you don’t have Node, you can download it from <a
     href="https://nodejs.org/">nodejs.org</a> and install it.</p>
 
-  <h3>Step 4. Use NPM to run the state web template locally</h3>
+  <h3>Step 3. Use NPM to run the state web template locally</h3>
 
 
   <div class="d-grid grid-columns-auto brd-top brd-left brd-gray-200">
@@ -187,7 +175,7 @@ customcss: /css/custom/homepage.css
 title: Your page title
 layout: page.njk
 ---</pre>
-
+  <p>If you would like to see a sample of the Eleventy Framework in action, visit the <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">State Web Template website Github repository</a>.</p>
  </div>
 </div>
 
