deleted test ID

--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -65,7 +65,7 @@ permalink: "structure/site-navigation.html"
   <div class="tabs responsive">
    <ul class="nav-tabs">
     <li>
-     <a href="#section1" id="tb22"><span class="sr-only">Single level menu </span>Example</a>
+     <a href="#section1"><span class="sr-only">Single level menu </span>Example</a>
     </li>
     <li>
      <a href="#section2"><span class="sr-only">Single level menu </span>Source code</a>
