Update heading, fix spelling

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -39,9 +39,9 @@ permalink: "download-and-setup.html"
   <nav class="page-navigation"></nav>
 
 
+  <h2>Template Files</h2>
   <div class="p-a-md p-b-md bg-gray-75">
-
-   <h2 class="h3 mt-0">State web template frameworks</h2>
+   <h3 class="mt-0">State web template frameworks</h3>
    <p>Esseintial state template files without sample content. Choose your framework to get started.</p>
 
    <div class="row">
