--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -112,7 +112,7 @@ permalink: "/get-started/implementation-steps.html"
     <br />
     <span class="cagov-step-list-content">
      <p>You’re now ready to follow your organization's change management and release process. You may want to perform
-      another QA and erify that everything works as expected in the production environment.</p>
+      another QA and verify that everything works as expected in the production environment.</p>
     </span>
    </li>
 
