--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -70,6 +70,7 @@ permalink: "visual-design/color.html"
   display: flex;
   gap: 22px;
   flex-wrap: wrap;
+  justify-content: center;
  }
 
  .palette-card {
