Fixed horizontal tracker page same links issue

--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -31,10 +31,10 @@ permalink: "patterns/progress-tracker.html"
 <div class="tabs responsive">
  <ul class="nav-tabs">
   <li>
-   <a href="#section1">Example</a>
+   <a href="#section1"><span class="sr-only">Horizontal tracker </span>Example</a>
   </li>
   <li>
-   <a href="#section2">Source code</a>
+   <a href="#section2"><span class="sr-only">Horizontal tracker </span>Source code</a>
   </li>
  </ul>
 
@@ -85,10 +85,10 @@ permalink: "patterns/progress-tracker.html"
 <div class="tabs responsive">
  <ul class="nav-tabs">
   <li>
-   <a href="#section3">Example</a>
+   <a href="#section3"><span class="sr-only">Vertical tracker </span>Example</a>
   </li>
   <li>
-   <a href="#section4">Source code</a>
+   <a href="#section4"><span class="sr-only">Vertical tracker </span>Source code</a>
   </li>
  </ul>
 
