--- a/pages/components.html
+++ b/pages/components.html
@@ -220,10 +220,6 @@ permalink: "components.html"
   </a>
  </div>
 
-
-
-
-
 </div>
 
 
@@ -231,7 +227,21 @@ permalink: "components.html"
 
 <div class="row">
 
- <div class="col-md-4 m-t-md">
+  <div class="col-md-4 m-t-md">
+    <a href="/components/pagination.html"
+     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+     title="Pagination component example">
+     <div class="p-a-md d-flex align-content-center">
+      <img src="/images/components/icon-pagination.jpg" alt="Pagination component" class="img-fluid">
+     </div>
+     <div class="p-a">
+      <h3 class="h5 m-t-0">Pagination</h3>
+      <p class="font-size-16 color-black">Allows navigation between large groups of content separated by pages.</p>
+     </div>
+    </a>
+  </div>
+  
+  <div class="col-md-4 m-t-md">
   <a href="/components/parallax.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Parallax component example">
@@ -260,20 +270,6 @@ permalink: "components.html"
    </div>
   </a>
  </div>
- <div class="col-md-4 m-t-md">
-  <a href="/components/side-navigation.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Side navigation component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-sidenav.jpg" alt="Side navigation component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Side navigation</h3>
-    <p class="font-size-16 color-black">Allows page-level navigation with anchor links.</p>
-   </div>
-  </a>
- </div>
-
 
 </div>
 
@@ -282,6 +278,21 @@ permalink: "components.html"
 
 
 <div class="row">
+
+  <div class="col-md-4 m-t-md">
+    <a href="/components/side-navigation.html"
+     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+     title="Side navigation component example">
+     <div class="p-a-md d-flex align-content-center">
+      <img src="/images/components/icon-sidenav.jpg" alt="Side navigation component" class="img-fluid">
+     </div>
+     <div class="p-a">
+      <h3 class="h5 m-t-0">Side navigation</h3>
+      <p class="font-size-16 color-black">Allows page-level navigation with anchor links.</p>
+     </div>
+    </a>
+  </div>
+  
  <div class="col-md-4 m-t-md">
   <a href="/components/social-media-icons.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -312,25 +323,26 @@ permalink: "components.html"
   </a>
  </div>
 
- <div class="col-md-4 m-t-md">
-  <a href="/components/tabs.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Tabs component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-tabs.jpg" alt="Tabs component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Tabs</h3>
-    <p class="font-size-16 color-black">Organizes related content into panels and enables visitors to navigate between
-     them. </p>
-   </div>
-  </a>
- </div>
-
-
 </div>
 
+<div class="row">
 
+  <div class="col-md-4 m-t-md">
+    <a href="/components/tabs.html"
+     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+     title="Tabs component example">
+     <div class="p-a-md d-flex align-content-center">
+      <img src="/images/components/icon-tabs.jpg" alt="Tabs component" class="img-fluid">
+     </div>
+     <div class="p-a">
+      <h3 class="h5 m-t-0">Tabs</h3>
+      <p class="font-size-16 color-black">Organizes related content into panels and enables visitors to navigate between
+       them. </p>
+     </div>
+    </a>
+   </div>
+  
+</div>
 
 
 
