--- a/pages/sample/pagination.html
+++ b/pages/sample/pagination.html
@@ -146,7 +146,7 @@ paginator.addEventListener('paginationClick', function (e) {
   alert(`You requested page ${e.detail}.`);
 });</textarea>
     <p class="p-t-md">Replace the alert with your own code to retrieve the content for
-     the requested page and write it into the DOM</p>
+     the requested page and write it into the DOM.</p>
    </div>
   </div>
  </section>
