--- a/pages/sample/side-navigation-sample-level3.html
+++ b/pages/sample/side-navigation-sample-level3.html
@@ -30,7 +30,6 @@ permalink: "/components/side-navigation-sample-level3.html"
       <li><a href="/components/side-navigation-sample-level4.html">Food and drinks</a></li>
       <li><a href="javascript:;" class="gray-200" aria-disabled="true">Surprise? </a></li>
       <li><a href="javascript:;" class="gray-200" aria-disabled="true">Activities</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Gifts</a></li>
      </ul>
     </li>
     <li><a href="javascript:;" class="gray-200" aria-disabled="true">Day of the party</a></li>
@@ -90,7 +89,7 @@ permalink: "/components/side-navigation-sample-level3.html"
      title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Decor</h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
      </div>
     </a>
    </div>
@@ -99,8 +98,8 @@ permalink: "/components/side-navigation-sample-level3.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Planning">
      <div class="p-a">
-      <h3 class="h5 m-t-0">Food and drincs</h3>
-      <p class="font-size-16 color-black">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
+      <h3 class="h5 m-t-0">Food and drinks</h3>
+      <p class="font-size-16 color-black">Curabitur faucibus venenatis libero ut.</p>
      </div>
     </a>
    </div>
@@ -109,8 +108,9 @@ permalink: "/components/side-navigation-sample-level3.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
      title="New year’s eve" aria-disabled="true">
      <div class="p-a">
-      <h3 class="h5 m-t-0">Surprise? </h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
+      <h3 class="h5 m-t-0">Activities </h3>
+      <p class="font-size-16 gray-200" aria-disabled="true">Change title to Activities. Use this text: Curabitur
+       faucibus venenatis libero.</p>
      </div>
     </a>
    </div>
