updated sample side nav site content

--- a/pages/sample/side-navigation-sample-level3.html
+++ b/pages/sample/side-navigation-sample-level3.html
@@ -28,7 +28,6 @@ permalink: "/components/side-navigation-sample-level3.html"
       <li><a href="javascript:;" class="gray-200" aria-disabled="true">Invitations</a></li>
       <li><a href="javascript:;" class="gray-200" aria-disabled="true">Decor</a></li>
       <li><a href="/components/side-navigation-sample-level4.html">Food and drinks</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Surprise? </a></li>
       <li><a href="javascript:;" class="gray-200" aria-disabled="true">Activities</a></li>
      </ul>
     </li>
@@ -63,8 +62,7 @@ permalink: "/components/side-navigation-sample-level3.html"
      title="Guest list" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Guest list</h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
-       libero ut.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
      </div>
     </a>
    </div>
@@ -109,8 +107,7 @@ permalink: "/components/side-navigation-sample-level3.html"
      title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Activities </h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Change title to Activities. Use this text: Curabitur
-       faucibus venenatis libero.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur faucibus venenatis libero ut.</p>
      </div>
     </a>
    </div>
