--- a/pages/sample/side-navigation-sample-level4.html
+++ b/pages/sample/side-navigation-sample-level4.html
@@ -35,9 +35,7 @@ permalink: "/components/side-navigation-sample-level4.html"
       <li><a href="javascript:;" class="gray-200" aria-disabled="true">Drinks</a></li>
      </ul>
     </li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Surprise?</a></li>
     <li><a href="javascript:;" class="gray-200" aria-disabled="true">Activities</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Gifts</a></li>
    </ul>
   </nav>
  </div>
@@ -102,7 +100,7 @@ permalink: "/components/side-navigation-sample-level4.html"
      title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Drinks</h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur faucibus venenatis libero ut. </p>
      </div>
     </a>
    </div>
