--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -299,7 +299,7 @@ permalink: "visual-design/icons.html"
 
     <form id="iconSearchForm" class="m-y-lg" onsubmit="return false">
       <span class="sr-only" id="IconInput">Search icons</span>
-      <input type="text" name="iconsearch" aria-labelledby="IconInput" placeholder="Browse icons"
+      <input type="search" name="iconsearch" aria-labelledby="IconInput" placeholder="Browse icons"
         class="search-textfield rounded-5 icons-searchbox">
       <button type="submit" title="submit" class="border-0 color-white icon-submit" aria-label="Submit"
         onclick="javascript:buildList(false,0);"><span class="ca-gov-icon-search" aria-hidden="true"></span><span
